--- a/css/carta-bebida.css
+++ b/css/carta-bebida.css
@@ -97,19 +97,31 @@ margin: 0;
    SECCIONES
 ----------------------------*/
 .menu-section-title {
-  font-size: 1.45rem;
-  margin: 30px 0 12px;
-  padding-bottom: 4px;
-  border-bottom: 1px solid #d8d2c9;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 700;
+  padding-bottom: 6px;
+  margin: 40px 0 18px;
+  letter-spacing: 0.06em;
+  font-family: 'Marcellus', serif;
+  color: #212121;
+
+  /* Subrayado elegante */
+  border-bottom: 3px solid #d7b26a;  /* más grueso y color dorado */
 }
 
 /* Subtítulos (vinos) */
 .sub-section-title {
-  font-size: 1.18rem;
-  color: #4a4a4a;
-  margin: 20px 0 12px;
-  padding-left: 8px;
+  font-size: 1.17rem;
+  color: #353535;
+  margin: 20px 0 10px 5vw;
+max-width: 70%;
   border-left: 3px solid #d7b26a;
+  border-bottom: 1px solid #d7b26a;
+  font-weight: 900; /* negrita */
+  font-family: 'Marcellus', serif;
+  position: relative;
 }
 
 /* ---------------------------
